Slightly hackish fix to misaligned date solution marker

--- a/app/styles/realmap.css
+++ b/app/styles/realmap.css
@@ -132,6 +132,7 @@ div#slider-end {
 div#slider-sol-marker {
 	display: none;
 	position: absolute;
+	top: 1px;
 }
 
 div#selected-date,
